5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1764_762.log
== TEST (2019-05-30 00:06:14) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:5])
ano=data[-4:]

novo_mes=mes[m]
print(dia+"de"+novo_mes+"de"+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:07:18) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:5])
ano=data[-4:]

novo_mes=mes[m]
print(dia + "de" + novo_mes + "de" + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:08:33) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo_mes=mes[m]
print(dia + "de" + novo_mes + "de" + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:08:57) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(dia + "de" + novo + "de" + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:18:11) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(dia ,+, "de" ,+, novo ,+, "de" ,+, ano)
-- ERROR:
File "XXXX", line 10
    print(dia ,+, "de" ,+, novo ,+, "de" ,+, ano)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:18:35) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(dia + "de" + novo + "de" + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:19:12) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(dia + ,"de", + novo + ,"de", + ano)
-- ERROR:
File "XXXX", line 10
    print(dia + ,"de", + novo + ,"de", + ano)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:19:49) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) + "de" + novo + "de" + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:20:12) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) + "de" + novo + "de" + ano)
-- EXECUTION TIME:
0.563147
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
2defevereirode1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
0dejaneirode1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
2dejaneirode2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:23:33) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) +" "+"de"+" "+novo+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:23:50) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) +" "+"de"+" "+novo+" "+"de"+" "+ano)
-- EXECUTION TIME:
0.483226
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
2 de fevereiro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
0 de janeiro de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
2 de janeiro de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:24:07) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) +" "+"de"+" "+novo+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:24:46) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[0:1])
m=int(data[2:3])
ano=data[-4:]

novo=mes[m]
print(str(dia) +" "+"de"+" "+novo+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:25:14) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:5])
ano=data[-4:]

novo=mes[m]
print(str(dia) +" "+"de"+" "+novo+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:26:00) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:5])
ano=data[-4:]
print(str(dia) +" "+"de"+" "+m+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:30:09) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:4])
ano=data[-4:]
print(str(dia) +" "+"de"+" "+m+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:30:37) 
-- CODE:
from numpy import *
data = (input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[:2])
m=int(data[3:4])
ano=data[-4:]
print(dia +" "+"de"+" "+m+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:42:42) 
-- CODE:
from numpy import *
data = str(input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[0:2])
m=int(data[2:4])
ano=data[4:]
nm=mes[m-1]
print(str(dia) +" "+"de"+" "+nm+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:42:51) 
-- CODE:
from numpy import *
data = str(input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=int(data[0:2])
m=int(data[2:4])
ano=data[4:]
nm=mes[m-1]
print(str(dia) +" "+"de"+" "+nm+" "+"de"+" "+ano)
-- EXECUTION TIME:
0.349346
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:43:33) 
-- CODE:
from numpy import *
data = str(input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=(data[0:2])
m=int(data[2:4])
ano=data[4:]
nm=mes[m-1]
print(dia+" "+"de"+" "+nm+" "+"de"+" "+ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:43:41) 
-- CODE:
from numpy import *
data = str(input("data:"))
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dia=(data[0:2])
m=int(data[2:4])
ano=data[4:]
nm=mes[m-1]
print(dia+" "+"de"+" "+nm+" "+"de"+" "+ano)
-- EXECUTION TIME:
0.517293
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
